# volumetric_drilling

./: .gitignore  CMakeLists.txt  README.md  collision_publisher.cpp  collision_publisher.h  launch.yaml  package.xml  volumetric_drilling.cpp  volumetric_drilling.h
ADF/: camera_sync.py  custom_projection_camera.yaml  drill.yaml  drilling_simulator.yaml  drills.yaml  gaze_marker.yaml  marker.yaml  segmentation_camera.yaml  single_stereo_camera.yaml  stereo_cameras.yaml  volume_171.yaml  volume_256.yaml  volume_256_LT138.yaml  volume_256_LT143.yaml  volume_256_LT144.yaml  volume_256_LT145.yaml  volume_256_LT146.yaml  volume_256_LT147.yaml  volume_256_LT148.yaml  volume_256_LT150.yaml  volume_256_LT151.yaml  volume_256_LT152.yaml  volume_256_LT169.yaml  volume_256_LT171.yaml  volume_256_RT138.yaml  volume_256_RT142.yaml  volume_256_RT143.yaml  volume_256_RT144.yaml  volume_256_RT146.yaml  volume_256_RT147.yaml  volume_256_RT150.yaml  volume_256_RT152.yaml  volume_256_RT153.yaml  volume_512.yaml
ADF/input_devices/: input_devices.yaml  input_devices_shadow.yaml
ADF/meshes/high_res/: 1mm.mtl  6mm.mtl  Cube.mtl  calibration.mtl  drillMesh.mtl
ADF/meshes/low_res/: 1mm.mtl  2mm.mtl  4mm.mtl  6mm.mtl  Cube.mtl
ADF/shaders/matcap/: shader.fs  shader.vs
ADF/shaders/volume/: shader.fs
ADF/shaders/volume_matcap/: shader.fs
ADF/world/: checkered_floor.yaml  s_world.yaml  world.yaml
plugin/: CMakeLists.txt  collision_publisher.h  joystick.cpp  joystick.h  volumetric_drilling.cpp  volumetric_drilling.h
plugin/camera_hmd/: hmd.cpp  hmd.h
plugin/camera_hmd/shaders/: hmd_distortion.fs  hmd_distortion.vs
plugin/camera_projection_override/: projection_override.cpp  projection_override.h
plugin/volumetric_drilling/: camera_panel_manager.cpp  camera_panel_manager.h  collision_publisher.cpp  collision_publisher.h  common.h  drill_manager.cpp  drill_manager.h  footpedal.cpp  footpedal.h  gaze_marker_controller.cpp  gaze_marker_controller.h  joystick.cpp  joystick.h  ros_interface.cpp  ros_interface.h  video_recording_controller.cpp  video_recording_controller.h  volumetric_drilling.cpp  volumetric_drilling.h  wave_generator.cpp  wave_generator.h
resources/matcap/: license.txt
resources/shaders/: shader.fs
resources/volumes/: nrrd_header.pkl
resources/volumes/drill_mesh/: drillMesh.mtl
rviz_config/: drilling_sim.rviz
scripts/: New Data Structure Format.md  Old Data Structure Format.md  adf_configs.py  ambf_move.py  ambf_vr.py  camera_sync.py  data_generation.py  data_record.py  data_record.sh  data_record_v2.py  data_record_v3.py  data_validation.py  data_validation_online.py  data_validation_online.sh  data_viewer.py  move_calib.py  msg_synchronizer.py  seg_nrrd_to_pngs.py  simulation_player.py  simulation_recorder.py  sync_cam_params.py  test.py  test_new_hdf_structure.py  trajectory_replay.py  utils.py
scripts/AnalyzeData/: read_hdf5.py  view_voxel_data.py
scripts/Recorded_Sessions/: Doe_01_17_2022.npz
scripts/study_gui/: bone_drilling_study.py  drilling_simulator.sh  gui_setup.py  gui_setup.yaml  layout.ui  pupil_manager.py  study_gui.py  study_manager.py
scripts/utils/: nrrd_to_adf.py  nrrd_to_adf_gui.py  nrrd_to_pngs.py  nrrd_viewer.py  remove_segment.py  seg_nrrd_to_pngs.py  volume_data_to_slices.py
vdrilling_msgs/: CMakeLists.txt  package.xml
vdrilling_msgs/msg/: UInt8Stamped.msg  VolumeProp.msg  points.msg
volumetric_drilling_msgs/: CMakeLists.txt  package.xml
volumetric_drilling_msgs/msg/: DrillSize.msg  Index.msg  VolumeInfo.msg  Voxels.msg
